# django-fragments

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
architectures/alert/: index.html
architectures/dropdown/: index.html
architectures/listbox/: index.html
architectures/menubar/: index.html
architectures/msg/: index.html
architectures/rationale/: index.html
config/: settings.py  urls.py
django_fragments/: __init__.py  apps.py  forms.py  tests.py  urls.py  utils.py  views.py
django_fragments/static/: chooseDown.js  doDropCommon.js  doDropMenu.js  doDropSelect.js  doTheme.js  getDowned.js
django_fragments/templates/: _nav.html  _test.html  _test_base.html  about.html  base_template.html  contact.html  down-list.html  down-menu.html  home.html  item.html  msg.html  msg_form.html  test_snippet.html
django_fragments/templatetags/: fragments.py  helpers.py  og.py
docs/: dropdown.md  icon.md  index.md  input.md  install.md  nava.md  notes.md  og.md  utils.md
docs/architectures/: alert.md  dropdown.md  listbox.md  menubar.md  msg.md  rationale.md
docs/fragments/: hput.md  icon.md  nava.md  og.md  themer.md
fragments/hput/: index.html
fragments/icon/: index.html
fragments/nava/: index.html
fragments/og/: index.html
hput/: index.html
icon/: index.html
input/: index.html
install/: index.html
nava/: index.html
nb/: forms.ipynb  test.ipynb  theme.ipynb
notes/: index.html
og/: index.html
search/: search_index.json
utils/: index.html
(+4 files in other folders)
